force-app/main/default/objects/cogn__Clean_Fields__c/cogn__Clean_Fields__c.object-meta.xml
<CustomObject>
    <label>Cognism Refresh Fields</label>
    <nameField>
        <label>Cognism Refresh Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cognism Refresh Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>