force-app/main/default/objects/cogn__Clean_Fields__c/fields/cogn__Clean_Job_Item__c.field-meta.xml
<CustomField>
    <fullName>cogn__Clean_Job_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clean Job Item</label>
    <referenceTo>cogn__Clean_Job_Item__c</referenceTo>
    <relationshipName>Result_Clean_Job</relationshipName>
    <type>Lookup</type>
</CustomField>