force-app/main/default/objects/cogn__Clean_Fields__c/fields/cogn__Contact__c.field-meta.xml
<CustomField>
    <fullName>cogn__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Result_Clean_Job</relationshipName>
    <type>Lookup</type>
</CustomField>