force-app/main/default/objects/cogn__Clean_Fields__c/fields/cogn__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cogn__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>