force-app/main/default/objects/cogn__Clean_Fields__c/fields/cogn__New_Value__c.field-meta.xml
<CustomField>
    <fullName>cogn__New_Value__c</fullName>
    <label>Updated Cognism Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>