force-app/main/default/objects/cogn__Clean_Fields__c/fields/cogn__New_Version_Of_Logic__c.field-meta.xml
<CustomField>
    <fullName>cogn__New_Version_Of_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Version Of Logic</label>
    <type>Checkbox</type>
</CustomField>