force-app/main/default/objects/cogn__Clean_Fields__c/fields/cogn__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>cogn__Old_Value__c</fullName>
    <label>Current Salesforce Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>